tests/test_data/invalid_semantics/name_resolution/out_of_scope_while.c
int main(void)
{
  while (x) {
    int x = 0;
  }
}
